--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
+    "@vercel/postgres": "^0.7.2",
     "next": "14.1.0",
+    "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0"
