--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
