--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
@@ -18,6 +19,7 @@
     "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
     "zod": "^3.22.4"
   },
