--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.8.1",
     "@reduxjs/toolkit": "^2.0.1",
     "@vercel/postgres": "^0.7.2",
+    "bcrypt": "^5.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "prisma": "^5.8.1",
@@ -24,6 +25,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
